# clinical-ai-copilot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: backend-ci.yml
apps/api/: main.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/worker/: main.py
docs/: 01-vision-scope.md  02-architecture.md  03-tech-stack.md  04-data-models.md  05-roadmap.md  06-compliance-safety.md  07-risks-decisions.md  08-scalability-architecture.md  09-security-identity-audit.md  10-observability-mlops.md  11-engineering-practices.md  12-training-plan.md  13-agent-build-plan.md  14-implementation-status.md  14-parallel-module-breakdown.md  15-agentic-architecture.md  16-feature-learning-map.md
docs/feature-guides/: case-lifecycle-and-orchestration.md  clinician-dashboard-and-human-review.md  security-identity-and-audit-trails.md  segmentation-runtime-and-operations.md  specialist-analysis-and-model-backends.md  system-foundations.md  verification-consensus-and-guardrails.md
notebooks/colab/: 01_ecg_ptbxl_training.explanation.md  01_ecg_ptbxl_training.ipynb  02_pathology_mil_training.explanation.md  02_pathology_mil_training.ipynb  03_brain_mri_nnunet_training.explanation.md  03_brain_mri_nnunet_training.ipynb  04_echo_ef_training.explanation.md  README.md  (+1 more)
tests/: __init__.py  test_api.py  test_consensus.py  test_model_backed_adapters.py  test_port_contracts.py  test_postgres_store.py  test_redis_queue.py  test_reflexion.py  test_torchxrayvision_specialist.py  test_verification_loop.py
(+25 files in other folders)
