[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-dx"
version = "0.1.0"
description = "Walking skeleton for the Aegis-Dx diagnostic copilot."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.7,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0",
]

[tool.setuptools]
package-dir = {"" = "packages/core/src"}

[tool.setuptools.packages.find]
where = ["packages/core/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 130
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F"]

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

